avfilter/vf_noise: fix high resolution support

Fixes Ticket4017
Signed-off-by: Michael Niedermayer <michaelni@gmx.at>